--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 h1{
     font-size: 50px;
@@ -26,4 +28,8 @@ section{
     color: white;
     font-weight: 700;
     border-radius: 5px;
+}
+.top-banner{
+    background-image: url(../images/top-banner.png);
+    background-repeat: no-repeat;
 }
