--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,14 @@ h1{
 }
 section{
     display: flex;
-
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
     padding-left: 2%;
 }
 .half-width img{
-    width: 80%;
+    width: 60%;
 }
 .link-button{
     text-decoration: none;
@@ -32,4 +32,12 @@ section{
 .top-banner{
     background-image: url(../images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(../images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.extra-padding{
+    padding-right:100px;
 }
