--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,14 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .orange-color{
     color: orange;
 
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
@@ -40,4 +43,30 @@ section{
 }
 .extra-padding{
     padding-right:100px;
+}
+.experience{
+    background-image: url(../images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right:5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+}
+#pro-developer{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange,tomato);
+    border-image-slice: 1;
+}
+#novice-developer{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,gray);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
